crates/swc/tests/tsc-references/assignmentCompatWithObjectMembers5_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C = function C() {
    "use strict";
    swcHelpers.classCallCheck(this, C);
};
var c;
var i;
c = i; // error
i = c; // error
